test/files/errors/struct_alreadyDef2.jg
lol struct {
    x int;
    y int;
}

_main int ()
{
    lol struct_lol;
    lol struct_lol;
    0 return;
}